1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (sysconfdir): Substitute.
	(install-config): Add.
	(install): Depend on install-config.

	* Makefile.am (install-data-local): Use $(sysconfdir), not
	$(sysconfdir)/swarm.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib.in (INSTALL, INSTALL_DATA): Substitute from
	INSTALL and SWARM_INSTALL_DATA_.
	(all): Don't install by default.
	(install-headers, install-lib): Update to use INSTALL_DATA.

	* Makefile.appl.in (INSTALL_PROGRAM): Set INSTALL_PROGRAM to
	@SWARM_INSTALL_PROGRAM@.
	(INSTALL): Substitute.

1998-08-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in (swarm_prefix, swarm_exec_prefix, swarm_libdir):
	Assigned from new substituted variables of same name.
	Remove "config_" throughout.

	* Makefile.am (install-data-local): Use mkinstalldirs instead of
	test + mkdir.

	* Makefile.lib.in, Makefile.appl.in: Moved here from top level.
	
	* Makefile.am: Install files above.  Install to $(sysconfdir)/swarm,
	not $(prefix)/etc.

	* config.swarm.in: Use @libdir@ instead of @prefix@/lib.

1998-08-10  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (config_swarm_SWARMLIBS): Add tclobjc to list of
	SWARMLIBS (as it is now part of Swarm proper).

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in: Remove mention of tclobjc.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (install-data-local): Create $(prefix)/etc if it
	doesn't exist.

1998-07-18  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (install-data-local): Install to
	$(prefix)/etc/config.swarm.

	* config.swarm.in: Added more environment variables to be set -old
	config was too limited.

1998-07-13  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am, config.swarm.in: New files.  
