@@ -1,6 +1,7 @@
 1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.appl.in (sysconfdir): Substitute.
+	(INSTALL_DATA): Substitute INSTALL_DATA from SWARM_INSTALL_DATA_.
 	(install-config): Add.
 	(install): Depend on install-config.
 
